# pagewright

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/manual_demo/: description.md
examples/north_face_nuptse/: ASSETS.md  product_spec.json  run.sh
examples/sa_infinity/: ASSETS.md  product_spec.json  run.sh  theme.toml
packaging/: Pagewright.icns  README.md  build_dmg.sh  build_macos.sh  build_windows.bat  launch.py  pagewright.spec
packaging/icon/: icon.html
pagewright/: __init__.py  cli.py  config.py  library.py  spec.py
pagewright/acquire/: __init__.py  fetcher.py  images.py  localserver.py  tier1_http.py  tier2_browser.py  tier3_attach.py
pagewright/app/: __init__.py  desktop.py  server.py  settings_store.py
pagewright/app/static/: app.js  i18n.js  index.html  style.css
pagewright/compose/: __init__.py  base.html  composer.py
pagewright/compose/blocks/: attribute_chips.html  closer.html  comparison_table.html  feature_grid.html  footer.html  hero.html  how_to_choose.html  icon_grid.html  lineup.html  macros.html  product_cards.html
pagewright/compose/themes/: cool.toml  editorial.toml
pagewright/enrich/: __init__.py  classify_images.py  copywrite.py  cutout.py  icons.py  translate.py
pagewright/extract/: __init__.py  extractor.py  manual.py
pagewright/llm/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
pagewright/render/: __init__.py  renderer.py  slice.py
pagewright/verify/: __init__.py  reviewer.py
tests/: test_compose.py  test_library.py  test_slice.py  test_spec.py
